// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/button/demo/basic.md correctly 1`] = `
<div
  class="button-list"
>
  <button
    class="m-button"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Default
      </span>
    </div>
  </button>
  <button
    class="m-button"
    disabled=""
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Default Disabled
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-primary"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Primary
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-primary"
    disabled=""
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Primary Disabled
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-dashed"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Dashed
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-dashed"
    disabled=""
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Dashed Disabled
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-danger"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Danger
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-danger"
    disabled=""
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Danger Disabled
      </span>
    </div>
  </button>
  <a
    class="m-button"
    href="https://tdida.github.io/modo-mobile/"
    target="_blank"
  >
    <span>
      Link Button
    </span>
  </a>
</div>
`;

exports[`renders ./components/button/demo/icon.md correctly 1`] = `
<div
  class="button-list"
>
  <button
    class="m-button m-button-primary m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-search"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-search"
            />
          </svg>
        </i>
      </i>
      <span>
        Search
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-primary m-button-inline m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-search"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-search"
            />
          </svg>
        </i>
      </i>
      <span>
        Search
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-primary m-button-circle m-button-inline m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-search"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-search"
            />
          </svg>
        </i>
      </i>
    </div>
  </button>
  <button
    class="m-button m-button-dashed m-button-circle m-button-inline m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-search"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-search"
            />
          </svg>
        </i>
      </i>
    </div>
  </button>
  <button
    class="m-button m-button-primary m-button-circle m-button-sm m-button-inline m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-search"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-search"
            />
          </svg>
        </i>
      </i>
    </div>
  </button>
</div>
`;

exports[`renders ./components/button/demo/loading.md correctly 1`] = `
<div
  class="button-list"
>
  <button
    class="m-button m-button-primary m-button-loading m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-loading"
      >
        <i
          class="m-icon m-icon-spin"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-loading"
            />
          </svg>
        </i>
      </i>
      <span>
        Loading
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-primary m-button-sm m-button-loading m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-loading"
      >
        <i
          class="m-icon m-icon-spin"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-loading"
            />
          </svg>
        </i>
      </i>
      <span>
        Loading
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-primary m-button-inline"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        Click me!
      </span>
    </div>
  </button>
  <button
    class="m-button m-button-primary m-button-inline m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-search"
      >
        <i
          class="m-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-search"
            />
          </svg>
        </i>
      </i>
      <span>
        Click me!
      </span>
    </div>
  </button>
  <br />
  <button
    class="m-button m-button-primary m-button-circle m-button-sm m-button-inline m-button-loading m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-loading"
      >
        <i
          class="m-icon m-icon-spin"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-loading"
            />
          </svg>
        </i>
      </i>
    </div>
  </button>
  <button
    class="m-button m-button-circle m-button-sm m-button-inline m-button-loading m-button-icon"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <i
        class="m-icon m-icon-loading"
      >
        <i
          class="m-icon m-icon-spin"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-loading"
            />
          </svg>
        </i>
      </i>
    </div>
  </button>
</div>
`;
